framer overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 h1 {
